[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mee"
author = "tonyfast"
author-email = "tony.fast@gmail.com"
home-page = "https://deathbeds.github.io"
classifiers = ["License :: OSI Approved :: MIT License"]

requires = [
    "configupdater",
    "doit",
    "jinja2",
    "maya",
    "pandas",
    "pathspec",
    "pydantic",
    "python-dotenv",
    "GitPython",
    "requests_cache",
    "requests",
    "ruamel.yaml",
    "stringcase",
    "uritemplate",
]

[tool.flit.metadata.requires-extra]
docs = ["jupyter-book"]

[tool.flit.scripts]
mee = "mee.__main__:main"
