[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mee"
author = "tonyfast"
author-email = "tony.fast@gmail.com"
home-page = "https://deathbeds.github.io"
classifiers = ["License :: OSI Approved :: MIT License"]


requires = ["doit", "uritemplate", "pydantic", "pandas", "typer"]

[tool.flit.metadata.requires-extra]
doc = ["jupyter-book", "jupyterbook_latex"]
mkdocs = ["mkdocs", "mkdocs-jupyter"]
dev = ["python-dotenv"]
config = [
    "configupdater",
    "doit",
    "jinja2",
    "maya",
    "pathspec",
    "GitPython",
    "requests_cache",
    "requests",
    "ruamel.yaml",
    "stringcase",
]


[tool.flit.scripts]
mee = "mee.__main__:main"
