[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mee"
author = "tonyfast"
author-email = "tony.fast@gmail.com"
home-page = "https://deathbeds.github.io"
classifiers = ["License :: OSI Approved :: MIT License"]


requires = [
    "doit",
    "pydantic",
    "typer",
    "pathspec",
    "appdirs",
    "python-dotenv",
    "sqlite_utils",
]

[tool.flit.entrypoints."mee.configure"]
gist = "mee.compat.gist"
submodule = "mee.compat.submodule"
jupyter_book = "mee.compat.jb"
mkdocs = "mee.compat.mkdocs"
readme = "mee.compat.readme"


[tool.flit.entrypoints."mee.build"]
sphinx = "mee.compat.sphinx"
mkdocs = "mee.compat.mkdocs"
nikola = "mee.compat.nikola"
jupyterlite = "mee.compat.jupyterlite"

[tool.flit.scripts]
mee = "mee.__main__:main"
